--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-core": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "bcrpyt": "^2.0.0",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
@@ -15,8 +16,12 @@
     "graphql-tools": "^2.7.2",
     "http": "0.0.0",
     "jsonwebtoken": "^8.1.0",
+    "jwt-simple": "^0.5.1",
     "lodash": "^4.17.4",
+    "mongoose": "^4.13.2",
+    "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
+    "path": "^0.12.7",
     "sequelize": "^4.22.6"
   },
   "devDependencies": {
